<resources>
    <string name="app_name">Flight Manager</string>
    <string name="setting">Setting</string>
    <string name="add_board_pass">ADD BOARDING PASS</string>
    <string name="boarding_pass_txt">Look like at don\'t have any boarding passes yet. Click the button below to import a boarding pass</string>
    <string name="selrct_boarding_pass_document">selrct boarding pass document</string>
    <string name="scan_your_download">Scan your \"Downloads\" folder for boarding pass</string>
    <string name="scan_physical_boarding_pass">Scan a physical boarding pass</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flight">Flight</string>
    <string name="show_notification">Show a notification for upcoming flights</string>
    <string name="time_before_flight">4 hours before the flight</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="display_all_data">Display all data captured from the boarding pass,\n most of which is unnecssary</string>
    <string name="show_additional_info">Show additional information</string>
    <string name="reduce_eyestrain">Reduce eyestrain and save battaery with dark mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="prevent_screen_from_rotating">Prevent the screen from rotating\n when displaying QR code</string>
    <string name="lock_orientation">Lock orienation</string>
    <string name="display">Display</string>
    <string name="romove_old_flight">Remove old flight</string>
    <string name="auto_remove_flights">Automaticaly remove flights \nthat accurred more than 14 days ago</string>
    <string name="firstname">firstName</string>
    <string name="last_name">lastName</string>
    <string name="flight_operator">BA</string>
    <string name="flight_number">123</string>
    <string name="date_of_board_pass">Desmber 31</string>
    <string name="reservation_number">Reservation No</string>
    <string name="booking_ref">XYZ123</string>
    <string name="to_airport_code">SFO</string>
    <string name="from_airport_code">ZRH</string>
    <string name="from_airport_name">Zurich</string>
    <string name="to_airport_name">San Francisco</string>
    <string name="your_upcoming_flight">Your uocoming flight</string>
    <string name="your_previous_flight">Your previous flight</string>
    <string name="operating_airline">Operating airline</string>
    <string name="airways">British Airways</string>
    <string name="date">Date</string>
    <string name="seat_number">35A</string>
    <string name="class_txt">Class</string>
    <string name="flight_class">F</string>
</resources>
